--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,8 +19,9 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
+            android:layout_height="2dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/keyline">
         </View>
     </RelativeLayout>
 
