--- a/app/src/main/res/layout/lottery.xml
+++ b/app/src/main/res/layout/lottery.xml
@@ -1,31 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="242dp"
+    android:layout_width="match_parent"
+    android:layout_height="242dp"
     android:background="@drawable/vector_smart_object">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="21dp"
         android:layout_marginBottom="21dp"
-        >
+        android:layout_marginLeft="28dp"
+        android:layout_marginRight="28dp"
+        android:layout_marginTop="21dp">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white">
+        <include layout="@layout/lottey_info"/>
 
-            <TextView
+            <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Lottery"
-                android:layout_centerHorizontal="true"
-                />
-
-        </RelativeLayout>
-
+                android:text="Read more"
+                android:onClick="openLottery"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
+                android:layout_gravity="center"
+                android:layout_marginTop="90dp"
+                android:background="@drawable/rectangle_38"/>
 
     </android.support.v7.widget.CardView>
 
