--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -10,7 +10,7 @@
         android:inputType="textEmailAddress"
         android:ems="10"
         android:hint="Email"
-        android:text="john_doe1@mail.com"
+        android:text="costa@programmer.net"
         android:id="@+id/email"
         android:layout_alignParentTop="true" />
     <View
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:inputType="textPassword"
         android:ems="10"
-        android:text="123123"
+        android:text="oifIlR"
 
         android:hint="Password"
         android:id="@+id/password"
