--- a/app/src/main/res/layout/lottery_item_for_lv.xml
+++ b/app/src/main/res/layout/lottery_item_for_lv.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:background="@color/white">
 
 
     <ImageView
@@ -17,7 +18,7 @@
         android:textColor="@color/lightBlue"
         android:text="Title"
         android:textSize="21sp"
-        android:id="@+id/textView3"
+        android:id="@+id/tvLotteryTitle"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/imLotteryLogo"/>
 
@@ -26,7 +27,7 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/tvLotteryDate"
-        android:layout_below="@+id/textView3"
+        android:layout_below="@+id/tvLotteryTitle"
         android:layout_toRightOf="@+id/imLotteryLogo"
         android:layout_toEndOf="@+id/imLotteryLogo" />
 
