--- a/app/src/main/res/layout/lottey_common.xml
+++ b/app/src/main/res/layout/lottey_common.xml
@@ -4,18 +4,21 @@
     android:background="@color/white"
     android:id="@+id/lotteryInfoLayout"
     android:orientation="vertical"
+    android:weightSum="100"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
         android:id="@+id/imLotteryLogo"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="16"
         android:layout_gravity="center" />
 
     <TextView
         android:id="@+id/tvLotteryTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="5"
         android:layout_gravity="center"
         android:text="Title"
         android:textColor="@color/black"
@@ -46,12 +49,12 @@
         android:textSize="10sp"
         android:textColor="@color/lightBlue"
         android:layout_gravity="center"
-        android:id="@+id/tvParticipance" />
+        android:id="@+id/tvParticipants" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lottery closed"
+        android:text="Thanks for participationg"
         android:textSize="15sp"
         android:textColor="@color/black"
         android:layout_gravity="center"
