--- a/app/src/main/res/layout/activity_lottery.xml
+++ b/app/src/main/res/layout/activity_lottery.xml
@@ -27,8 +27,14 @@
             android:layout_centerVertical="true"
             android:onClick="lotteryHistory"
             android:text="History">
-
         </TextView>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/keyline">
+        </View>
     </RelativeLayout>
 
     <ScrollView
@@ -45,11 +51,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:background="@color/white"
                 android:layout_marginTop="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginLeft="16dp">
 
-                <include layout="@layout/lottey_info"/>
+                <include layout="@layout/lottey_common"/>
 
             <ImageView
                 android:layout_width="300dp"
