--- a/app/src/main/res/layout/lottey_common.xml
+++ b/app/src/main/res/layout/lottey_common.xml
@@ -36,7 +36,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Lottery closed"
+        android:text="Lottery Closed"
         android:textSize="30sp"
         android:textColor="#b8b8b8"
         android:layout_gravity="center"
